--- a/group.html
+++ b/group.html
@@ -32,10 +32,10 @@
 	<ul style="margin-top:5px;">
 		<li><font style="font-weight:bold; line-height: 120%">Bing Fan</font>, PhD student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Shaohua Dong</font>, PhD student</li>
-		<li> <font style="font-weight:bold; line-height: 120%">Xiaoqiong Liu</font>, PhD student (female)</li>
+		<li> <font style="font-weight:bold; line-height: 120%">Xiaoqiong Liu</font>, PhD student</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Andres Escamilla Varela</font>, MS student</li>
-		<li><font style="font-weight:bold; line-height: 120%">Ya Meng</font>, MS student (female)</li>
-		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, volunteer research assistant (female)</li>
+		<li><font style="font-weight:bold; line-height: 120%">Ya Meng</font>, MS student</li> <!--(female)--> 
+		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, volunteer research assistant</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student</li>
     </ul>
 
@@ -54,11 +54,11 @@
 	<font size="4" color="black"><b>Alumni</b></font>
 	<br>
 	<ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, MS (female), 2024</li>
+		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, MS, 2024</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Pranay Rishith Bondugula</font>, MS, 2024</li>
 		<li><font style="font-weight:bold; line-height: 120%">Saikiran Motati</font>, K-12 student from TAMS, 2024</li>
 		<li> <font style="font-weight:bold; line-height: 120%">Thanh Le</font>, MS, 2023</li>
-		<li> <font style="font-weight:bold; line-height: 120%">Helen Li</font>, K-12 student (female) from TAMS, 2023</li>
+		<li> <font style="font-weight:bold; line-height: 120%">Helen Li</font>, K-12 student from TAMS, 2023</li> <!--(female)--> 
     </ul>
 
 	<!-- <TABLE border=0 cellpadding=1>
