--- a/publications.html
+++ b/publications.html
@@ -153,7 +153,7 @@
 						<br>
 						<font>European Conference on Computer Vision (<b>ECCV</b>), 2024.</font>
 						<br>
-						<a href="https://arxiv.org/abs/2403.05231" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; code 
+						<a href="https://arxiv.org/abs/2403.05231" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; <a href="https://github.com/LitingLin/LoRAT" target="_blank"><font color="#2D61FF">code</font></a> 
 						<br>
 					</p>
 				</td>
