--- a/group.html
+++ b/group.html
@@ -37,6 +37,7 @@
 		<li><font style="font-weight:bold; line-height: 120%">Ya Meng</font>, MS student</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, volunteer research assistant</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student</li>
+		<li><font style="font-weight:bold; line-height: 120%">Arpit Khavate,</font>, High School student</li>
     </ul>
 
 	<!-- <font size="4" color="#034f84"><b>External Students</b></font>
