--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -36,7 +36,7 @@ div img:hover{
 	
     <p style="margin-top:5px;">
 	<center>
-	<font size="4"> <b>Fall 2023</b></font> &nbsp; &nbsp; 
+	<font size="4"> <b>Fall 2024</b></font> &nbsp; &nbsp; 
 	<br>
 	</center>
 	</p>
@@ -65,6 +65,10 @@ div img:hover{
 		<li>
 			<font size="4"> Classroom: NTDP B190</font>
 		</li>
+		<br>
+		<li>
+			<font size="4"> TA: Xiaoqiong Liu (xiaoqiongliu@my.unt.edu), by appointment</font>
+		</li>
 		
 	</ul>
 	</p>
@@ -76,11 +80,11 @@ div img:hover{
 	</p>
 	
 	<p style="text-align:justify">
-	<font size="4">This is a research-oriented course that aims at providing latest frontiers in artificial intelligence (AI). It will describe
-		advanced approaches in AI, with a focus on recent deep learning architectures such as convolutional neural networks
-		and Transformer and their applications especially in different computer vision problems including image recognition,
-		object detection, semantic segmentation, visual object tracking, video object detection and segmentation, vision and language, generative models, unsupervised learning, self-supervised learning, etc. Through this course, the students are expected to understand
-		and digest various advanced AI topics in the context of computer vision by many in-class discussion and paper presentations.</font>
+	<font size="4">This is a research-oriented course that aims to provide latest frontiers in artificial intelligence (AI). 
+		It will describe advanced approaches in AI, with a focus on recent topics in computer vision or multimodal learning, 
+		such as prompt learning, multimodal vision-language learning, visual generation, video understanding, etc. Through 
+		this course, the students are expected to understand and digest various advanced AI topics by extensive in-class paper 
+		presentation and discussion.</font>
 	</p>
 	
 	<HR>
@@ -108,8 +112,7 @@ div img:hover{
 			<font size="4"> <i>Introduction to Deep Learning</i>, by Eugene Charniak, 2019. <a href="https://mitpress.mit.edu/books/introduction-deep-learning" target="_blank"><font color="#2D61FF">link</font></a></font>
 		</li>
 	</ul>
-	<font size="4">In addition to the textbooks, extra reading materials will be provided as we cover topics. Check out the
-course website regularly for updated reading materials.</font>
+	<font size="4">In addition to the textbooks, you're highly encouraged to read more related papers.</font>
 	</p>
 	
 	<HR>
@@ -117,8 +120,10 @@ course website regularly for updated reading materials.</font>
 	<p style="margin-top:5px;">
 	<font size="4"> <b>Schedule (<font color="#FF0000">update may be applied</font>)</b></font> 
 	</p>
+
+	To be added ...
 	
-	<p style="text-align:justify">
+	<!-- <p style="text-align:justify">
 	<table border = "0" cellspacing="5px">
 		<tr>
 			<td width=400 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Date</b> </font></td>
@@ -295,8 +300,10 @@ course website regularly for updated reading materials.</font>
 	</table>
 	</p>
 	
+	-->
+
 	<HR>
-	
+
 	<p style="margin-top:5px;">
 	<font size="4"> <b>Grading policy</b></font> 
 	</p>
@@ -308,16 +315,13 @@ course website regularly for updated reading materials.</font>
 			<font size="4"> Paper presentation: 40%</font>
 		</li>
 		<li>
-			<font size="4"> Paper review: 30%</font>
+			<font size="4"> Paper review: 40%</font>
 		</li>
 		<li>
-			<font size="4"> In-class discussion: 10%</font>
-		</li>
-		<li>
-			<font size="4"> Literature review: 20%</font>
+			<font size="4"> In-class discussion: 20%</font>
 		</li>
 	</ul>
-	</p>
+	</p> 
 	
 	<!-- <HR>
 	
