--- a/teaching.html
+++ b/teaching.html
@@ -33,7 +33,7 @@
 		<!-- [<a href="https://hengfan2010.github.io/teaching/23F-6280/index.htm" target="_blank"><font color="#2D61FF">course website</font></a>] -->
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CSCE 6280, Advanced Topics in Artificial Intelligence, Fall 2023, Fall 2024 [<a href="#" target="_blank"><font color="#2D61FF">course website</font></a>]. 
+				CSCE 6280, Advanced Topics in Artificial Intelligence, Fall 2023, Fall 2024 [<a href="https://hengfan2010.github.io/teaching/24F-6280/index.htm" target="_blank"><font color="#2D61FF">course website</font></a>]. 
 				<br>
 			</p>
 		</li>
