--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -312,13 +312,16 @@ div img:hover{
 	<font size="4">Grading will be based on the following components:</font>
 	<ul>
 		<li>
-			<font size="4"> Paper presentation: 40%</font>
+			<font size="4"> Paper presentation: 30%</font>
 		</li>
 		<li>
-			<font size="4"> Paper review: 40%</font>
+			<font size="4"> Paper review: 30%</font>
 		</li>
 		<li>
-			<font size="4"> In-class discussion: 20%</font>
+			<font size="4"> Project: 30%</font>
+		</li>
+		<li>
+			<font size="4"> In-class discussion: 10%</font>
 		</li>
 	</ul>
 	</p> 
