--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -121,10 +121,6 @@ div img:hover{
 	<font size="4"> <b>Schedule (<font color="#FF0000">update may be applied</font>)</b></font> 
 	</p>
 
-	To be added ...
-
-
-
 	<table cellpadding="0" cellspacing="5" border="0">
 		<thead>
 			<tr bgcolor="#eeeeff">
@@ -252,7 +248,7 @@ div img:hover{
 								LoRA: Low-Rank Adaptation of Large Language Models, ICLR, 2022
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Piyush Hemnani </font>
 					</font>
 				</td>
 			</tr>
@@ -273,7 +269,7 @@ div img:hover{
 								Yolo-world: Real-time open-vocabulary object detection, CVPR, 2024
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Donger Chen </font>
 					</font>
 				</td>
 			</tr>
@@ -289,7 +285,7 @@ div img:hover{
 								OVTrack: Open-Vocabulary Multiple Object Tracking, CVPR, 2023
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Minghao Li </font>
 					</font>
 				</td>
 			</tr>
@@ -311,7 +307,7 @@ div img:hover{
 								Transformers are SSMs: Generalized models and efficient algorithms through structured state space duality, ICML, 2024
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Bing Fan </font>
 					</font>
 				</td>
 			</tr>
@@ -327,7 +323,7 @@ div img:hover{
 								VideoMamba: State Space Model for Efficient Video Understanding, ECCV, 2024
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Bizhan Alipour Pijani </font>
 					</font>
 				</td>
 			</tr>
@@ -422,7 +418,7 @@ div img:hover{
 								Autoregressive visual tracking, CVPR, 2023
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Yen Pham </font>
 					</font>
 				</td>
 			</tr>
@@ -527,6 +523,9 @@ div img:hover{
 					<font size="4">
 						<strong>Project presentation</strong><br>
 						<font style="color: blue;"><strong>Presentation order: </strong> TBD </font>
+
+						<br><br>
+						<font style="color: red;"><strong>Project report due:</strong> 11/22</font>
 					</font>
 				</td>
 			</tr>
