--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -114,6 +114,62 @@ div img:hover{
 	</ul>
 	<font size="4">In addition to the textbooks, you're highly encouraged to read more related papers.</font>
 	</p>
+
+	<HR>
+	
+		<p style="margin-top:5px;">
+		<font size="4"> <b>Papers to review and due dates</b></font> 
+		</p>
+		
+		<p style="text-align:justify">
+		<font size="4">There are 11 papers in total to review throughout the whole semester. Please submit your paper review before the corresponding due date. <font style="color: red;">Late submissions will NOT be accepted.</font>
+		<ol>
+			<li>
+				<font size="4"> CrossViT: Cross-Attention Multi-Scale Vision Transformer for Image Classification, ICCV, 2021.</font> <br> <font size="4" style="color: red;"> Due: 8/30/2024</font>
+			</li>
+			<br>
+			<li>
+				<font size="4"> VICRegL: Self-Supervised Learning of Local Visual Features, NeurIPS, 2022.</font> <br> <font size="4" style="color: red;"> Due: 9/6/2024</font>
+			</li>
+			<br>
+			<li>
+				<font size="4"> Siamese Masked Autoencoders, NeurIPS, 2023.</font> <br> <font size="4" style="color: red;"> Due: 9/13/2024</font>
+			</li>
+			<br>
+			<li>
+				<font size="4"> RegionCLIP: Region-based Language-Image Pretraining, CVPR, 2022.</font> <br> <font size="4" style="color: red;"> Due: 9/20/2024</font>
+			</li>
+			<br>
+			<li>
+				<font size="4"> Maple: Multi-modal prompt learning, CVPR, 2023.</font> <br> <font size="4" style="color: red;"> Due: 9/27/2024</font>
+			</li>
+			<br>
+			<li>
+				<font size="4"> Vision transformer adapter for dense predictions, ICLR, 2023.</font> <br> <font size="4" style="color: red;"> Due: 10/4/2024</font>
+			</li>
+			<br>
+			<li>
+				<font size="4"> Scaling Open-Vocabulary Object Detection, NeurIPS, 2023.</font> <br> <font size="4" style="color: red;"> Due: 10/11/2024</font>
+			</li>
+			<br>
+			<li>
+				<font size="4"> Learning Concise and Descriptive Attributes for Visual Recognition, ICCV, 2023.</font> <br> <font size="4" style="color: red;"> Due: 10/18/2024</font>
+			</li>
+			<br>
+			<li>
+				<font size="4"> MixFormerV2: Efficient Fully Transformer Tracking, NeurIPS, 2023.</font> <br> <font size="4" style="color: red;"> Due: 10/25/2024</font>
+			</li>
+			<br>
+			<li>
+				<font size="4"> Segment Anything, ICCV, 2023.</font>  <br> <font size="4" style="color: red;"> Due: 11/1/2024</font>
+			</li>
+			<br>
+			<li>
+				<font size="4"> Segment and Complete: Defending Object Detectors against Adversarial Patch Attacks with Robust Patch Detection, CVPR, 2022.</font> <br> <font size="4" style="color: red;"> Due: 11/8/2024</font>
+			</li>
+
+		</ol>
+		</p>
 	
 	<HR>
 
