--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -91,7 +91,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <h3><font color="#355DDC">Title: Bayesian Inference, Uncertainty, Neural network</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Minghao Li</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 08-26-2024 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
