--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -214,7 +214,7 @@ div img:hover{
 								Swin Transformer: Hierarchical Vision Transformer using Shifted Windows, ICCV, 2021
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Joseph Caldwell </font>
 					</font>
 				</td>
 			</tr>
@@ -416,7 +416,7 @@ div img:hover{
 								Evolving Interpretable Visual Classifiers with Large Language Models, ECCV, 2024
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Dawei Gao </font>
 					</font>
 				</td>
 			</tr>
@@ -490,7 +490,7 @@ div img:hover{
 								Trackformer: Multi-object tracking with transformers, CVPR, 2022
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Yihao Zhu </font>
 					</font>
 				</td>
 			</tr>
@@ -511,7 +511,7 @@ div img:hover{
 								NeRF: Representing Scenes as Neural Radiance Fields for View Synthesis, ECCV, 2020
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Ruixiao Huang </font>
 					</font>
 				</td>
 			</tr>
@@ -532,7 +532,7 @@ div img:hover{
 								Visionllm: Large language model is also an open-ended decoder for vision-centric tasks, NeurIPS, 2023
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Paul Phillips </font>
 					</font>
 				</td>
 			</tr>
@@ -565,7 +565,7 @@ div img:hover{
 								Dual Attention Suppression Attack: Generate Adversarial Camouflage in Physical World, CVPR, 2021
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Shengping Bi </font>
 					</font>
 				</td>
 			</tr>
