--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -200,7 +200,7 @@ div img:hover{
 
 
 			<tr bgcolor="#e6f4e6">
-				<td style="text-align: center; padding: 8px;" rowspan="2">
+				<td style="text-align: center; padding: 8px;" rowspan="1">
 					<font size="4"><strong>Week 2</strong> (8/30)</font>
 				</td>
 				<td style="padding: 8px;">
@@ -218,7 +218,7 @@ div img:hover{
 					</font>
 				</td>
 			</tr>
-			<tr bgcolor="#e6f4e6">
+			<!-- <tr bgcolor="#e6f4e6">
 				<td style="padding: 8px;">
 					<font size="4">
 						<strong>Self-supervised learning</strong><br>
@@ -233,7 +233,7 @@ div img:hover{
 						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
 					</font>
 				</td>
-			</tr>
+			</tr> -->
 
 
 			<tr bgcolor="#d3f6fc">
@@ -251,7 +251,7 @@ div img:hover{
 								BLIP-2: Bootstrapping Language-Image Pre-training with Frozen Image Encoders and Large Language Models, ICML, 2023
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Suman Pandey </font>
 					</font>
 				</td>
 			</tr>
@@ -267,7 +267,7 @@ div img:hover{
 								Grounding dino: Marrying dino with grounded pre-training for open-set object detection, arXiv, 2023
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Syed Ali </font>
 					</font>
 				</td>
 			</tr>
@@ -288,7 +288,7 @@ div img:hover{
 								Learning to Prompt for Open-Vocabulary Object Detection with Vision-Language Model, CVPR, 2023
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Mingchen Li </font>
 					</font>
 				</td>
 			</tr>
@@ -385,7 +385,7 @@ div img:hover{
 			</tr>
 
 
-			<tr bgcolor="#d3f6fc">
+			<!-- <tr bgcolor="#d3f6fc">
 				<td style="text-align: center; padding: 8px;" rowspan="2">
 					<font size="4"><strong>Week 7</strong> (10/4)</font>
 				</td>
@@ -403,8 +403,11 @@ div img:hover{
 						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
 					</font>
 				</td>
-			</tr>
+			</tr> -->
 			<tr bgcolor="#d3f6fc">
+				<td style="text-align: center; padding: 8px;" rowspan="1">
+					<font size="4"><strong>Week 7</strong> (10/4)</font>
+				</td>
 				<td style="padding: 8px;">
 					<font size="4">
 						<strong>Learning by description</strong><br>
@@ -422,7 +425,7 @@ div img:hover{
 			</tr>
 
 
-			<tr bgcolor="#e6f4e6">
+			<!-- <tr bgcolor="#e6f4e6">
 				<td style="text-align: center; padding: 8px;" rowspan="2">
 					<font size="4"><strong>Week 8</strong> (10/11)</font>
 				</td>
@@ -440,8 +443,11 @@ div img:hover{
 						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
 					</font>
 				</td>
-			</tr>
+			</tr> -->
 			<tr bgcolor="#e6f4e6">
+				<td style="text-align: center; padding: 8px;" rowspan="1">
+					<font size="4"><strong>Week 8</strong> (10/11)</font>
+				</td>
 				<td style="padding: 8px;">
 					<font size="4">
 						<strong>Motion and tracking: depth</strong><br>
@@ -453,7 +459,7 @@ div img:hover{
 								Unifying flow, stereo and depth estimation, IEEE TPAMI, 2023
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Michael Oluwole </font>
 					</font>
 				</td>
 			</tr>
