--- a/group.html
+++ b/group.html
@@ -34,10 +34,13 @@
 		<li><font style="font-weight:bold; line-height: 120%">Shaohua Dong</font>, PhD student</li>
 		<li> <font style="font-weight:bold; line-height: 120%">Xiaoqiong Liu</font>, PhD student</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Andres Escamilla Varela</font>, MS student</li>
-		<li><font style="font-weight:bold; line-height: 120%">Ya Meng</font>, MS student</li> <!--(female)--> 
+		
 		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, volunteer research assistant</li> <!--(female)--> 
+		<li><font style="font-weight:bold; line-height: 120%">Syed Abdullah Imam</font>, Undergraduate student</li>
+		<li><font style="font-weight:bold; line-height: 120%">Joshua Yao</font>, Undergraduate student</li> <!--(minority)--> 
+		<li><font style="font-weight:bold; line-height: 120%">Hasini Kanuru</font>, Undergraduate student</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student</li>
-		<li><font style="font-weight:bold; line-height: 120%">Arpit Khavate,</font>, High School student</li>
+		<li><font style="font-weight:bold; line-height: 120%">Arpit Khavate</font>, High School student</li> <!--(TAMS)--> 
     </ul>
 
 	<!-- <font size="4" color="#034f84"><b>External Students</b></font>
