--- a/group.html
+++ b/group.html
@@ -39,8 +39,8 @@
 		<li><font style="font-weight:bold; line-height: 120%">Syed Abdullah Imam</font>, Undergraduate student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Joshua Yao</font>, Undergraduate student</li> <!--(minority)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Hasini Kanuru</font>, Undergraduate student</li> <!--(female)--> 
-		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student</li>
-		<li><font style="font-weight:bold; line-height: 120%">Arpit Khavate</font>, High School student</li> <!--(TAMS)--> 
+		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student</li> <!-- entennial High School -->
+		<li><font style="font-weight:bold; line-height: 120%">Arpit Khavate</font>, High School student</li> <!-- ebanon Trail High School -->
     </ul>
 
 	<!-- <font size="4" color="#034f84"><b>External Students</b></font>
