--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -100,7 +100,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <h3><font color="#355DDC">Title: You Only Cache Once: Decoder-Decoder Architectures for Language Models</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Shaohua Dong</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 09-09-2024 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
