--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -100,15 +100,6 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: You Only Cache Once: Decoder-Decoder Architectures for Language Models</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Shaohua Dong</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 09-09-2024 (Monday)</p>
-                <p><b>Room:</b> F219 </p>
-            </div>
-        </section>
-
-        <section class="section speaker">
-            <div class="speaker-text">
                 <h3><font color="#355DDC">Title: TBD</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Md Abdullah Al Forhad</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 09-16-2024 (Monday)</p>
@@ -199,12 +190,19 @@
 
         <section class="section speaker">
             <div class="speaker-text">
+                <h3><font color="#355DDC">Title: GQA: Training Generalized Multi-Query Transformer Models from Multi-Head Checkpoints</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Shaohua Dong</a></p>
+                <p><b>Time:</b> 10:00am-11:00pm on 12-02-2024 (Monday)</p>
+                <p><b>Room:</b> <font color="purple">F219</font></p>
+                <br>
                 <h3><font color="#355DDC">Title: TBD</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Dawei Gao</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 12-02-2024 (Monday)</p>
-                <p><b>Room:</b> <font color="purple">F285 (not F219)</font></p>
+                <p><b>Room:</b> <font color="purple">F219</font></p>
             </div>
         </section>
+
+        
 
         <br> 
 
