--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -429,7 +429,7 @@ div img:hover{
 			
 
 
-			<!-- <tr bgcolor="#e6f4e6">
+			<tr bgcolor="#e6f4e6">
 				<td style="text-align: center; padding: 8px;" rowspan="2">
 					<font size="4"><strong>Week 8</strong> (10/11)</font>
 				</td>
@@ -444,14 +444,11 @@ div img:hover{
 								Gmflow: Learning optical flow via global matching; CVPR, 2022
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Morui Zhu </font>
 					</font>
 				</td>
-			</tr> -->
+			</tr>
 			<tr bgcolor="#e6f4e6">
-				<td style="text-align: center; padding: 8px;" rowspan="1">
-					<font size="4"><strong>Week 8</strong> (10/11)</font>
-				</td>
 				<td style="padding: 8px;">
 					<font size="4">
 						<strong>Motion and tracking: depth</strong><br>
