--- a/publications.html
+++ b/publications.html
@@ -112,6 +112,22 @@
 		<table border=0 cellpadding=4>
 			
 			<tr>
+				<td><img src="./publication/transflow.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">Optical Flow as Spatial-Temporal Attention Learners</font>
+						<br>
+						<font color="#000000" >Y. Lu, C. Han, Q. Wang, H. Fan, Z. Kong, D. Liu, and Y. Chen</font>
+						<br>
+						<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 2024, accepted. </font>
+						<br>
+						paper
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
 				<td><img src="./publication/cyclicrefiner.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
