--- a/group.html
+++ b/group.html
@@ -41,6 +41,7 @@
 		<li><font style="font-weight:bold; line-height: 120%">Hasini Kanuru</font>, Undergraduate student</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student</li> <!-- entennial High School -->
 		<li><font style="font-weight:bold; line-height: 120%">Arpit Khavate</font>, High School student</li> <!-- ebanon Trail High School -->
+		<li><font style="font-weight:bold; line-height: 120%">Jonas Li</font>, High School student</li>
     </ul>
 
 	<!-- <font size="4" color="#034f84"><b>External Students</b></font>
