--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 
 	<font size="4" color="black"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2024-09:</font> Recognized as the World's Top 2% Scientists in 2023 by Stanford University/Elsevier.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2024-09:</font> A paper on optical flow is accepted to PAMI.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2024-07:</font> A paper on multi-view 3D object detection and tracking (<a href="https://arxiv.org/abs/2407.03240" target="_blank"><font><font color="#2D61FF">pdf</font></font></a>) is accepted to IJCV.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2024-07:</font> Two papers on object tracking (<a href="https://arxiv.org/abs/2403.05021" target="_blank"><font><font color="#2D61FF">pdf</font></font></a>/<a href="https://github.com/HengLan/SMOT" target="_blank"><font><font color="#2D61FF">code</font></font></a>, <a href="https://arxiv.org/abs/2403.05231" target="_blank"><font><font color="#2D61FF">pdf</font></font></a>/<a href="https://github.com/LitingLin/LoRAT" target="_blank"><font color="#2D61FF">code</font></a>) are accepted to <a href="https://eccv2024.ecva.net/" target="_blank"><font><font color="#2D61FF">ECCV 2024</font></font></a>.</li>
