--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -109,7 +109,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <h3><font color="#355DDC">Title: Task-Driven Causal Feature Distillation: Towards Trustworthy Risk Prediction</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Dawei Gao</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 09-23-2024 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
@@ -118,7 +118,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <h3><font color="#355DDC">Title: ORPO: Monolithic Preference Optimization without Reference Model</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Zexuan Meng</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 09-30-2024 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
