--- a/publications.html
+++ b/publications.html
@@ -40,22 +40,6 @@
 		<!-- 
 		
 		<tr>
-			<td><img src="./publication/vasttrack.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-			<td valign=top>
-				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">VastTrack: Vast Category Visual Object Tracking</font>
-					<br>
-					<font color="#000000" >L. Peng, J. Gao, X. Liu, W. Li, S. Dong, Z. Zhang, H. Fan&dagger;, and L. Zhang&dagger; (&dagger;equal advising)</font>
-					<br>
-					<font>	arXiv:2403.03493, 2024. </font>
-					<br>
-					<a href="https://arxiv.org/abs/2403.03493" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/HengLan/VastTrack" target="_blank"><font color="#2D61FF">code-benchmark</font></a>  
-					<br>
-				</p>
-			</td>
-		</tr>
-		
-		<tr>
 			<td><img src="./publication/fgd.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
@@ -110,6 +94,22 @@
 		<br>
 	
 		<table border=0 cellpadding=4>
+
+			<!-- <tr>
+				<td><img src="./publication/vasttrack.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">VastTrack: Vast Category Visual Object Tracking</font>
+						<br>
+						<font color="#000000" >L. Peng*, J. Gao*, X. Liu*, W. Li*, S. Dong*, Z. Zhang, H. Fan&dagger;, and L. Zhang&dagger; (*/&dagger;co-first/last authors)</font>
+						<br>
+						<font>Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2024.</font>
+						<br>
+						<a href="https://arxiv.org/abs/2403.03493" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/HengLan/VastTrack" target="_blank"><font color="#2D61FF">code-benchmark</font></a>  
+						<br>
+					</p>
+				</td>
+			</tr> -->
 			
 			<tr>
 				<td><img src="./publication/transflow.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
@@ -560,7 +560,7 @@
 					<br>
 					<font color="#000000" >M. Guo*, Z. Zhang*, H. Fan, and L. Jing (*equal contribution)</font>
 					<br>
-					<font>	Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2022.</font>
+					<font>Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2022.</font>
 					<br>
 					<a href="./publication/VLT-NeurIPS-2022.pdf" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="./publication/vlt-poster.pdf" target="_blank"><font color="#2D61FF">poster</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#2D61FF">code</font></a>
 					<br>
