--- a/publications.html
+++ b/publications.html
@@ -29,7 +29,7 @@
 
 	<font size="3">For full publication list, please go to my <a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ" target="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#2D61FF">Google Scholar profile</font></a>.</font>
 	<br>
-	<!-- Note: * equal contribution &nbsp; &dagger;equal advising -->
+	(*equal contribution &nbsp;&nbsp;&nbsp; &dagger;equal advising and co-last authors)
 	<!-- <HR> -->
 	
 	<!-- <font size="4" color="#2D61FF"><b>Pre-prints</b></font>
@@ -95,13 +95,13 @@
 	
 		<table border=0 cellpadding=4>
 
-			<!-- <tr>
+			<tr>
 				<td><img src="./publication/vasttrack.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">VastTrack: Vast Category Visual Object Tracking</font>
 						<br>
-						<font color="#000000" >L. Peng*, J. Gao*, X. Liu*, W. Li*, S. Dong*, Z. Zhang, H. Fan&dagger;, and L. Zhang&dagger; (*/&dagger;co-first/last authors)</font>
+						<font color="#000000" >L. Peng*, J. Gao*, X. Liu*, W. Li*, S. Dong*, Z. Zhang, H. Fan&dagger;, and L. Zhang&dagger;</font>
 						<br>
 						<font>Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2024.</font>
 						<br>
@@ -109,7 +109,7 @@
 						<br>
 					</p>
 				</td>
-			</tr> -->
+			</tr>
 			
 			<tr>
 				<td><img src="./publication/transflow.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
@@ -149,7 +149,7 @@
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">Beyond MOT: Semantic Multi-Object Tracking</font>
 						<br>
-						<font color="#000000" >Y. Li, Q. Li, H. Wang, X. Ma, J. Yao, S. Dong, H. Fan&dagger;, and L. Zhang&dagger; (&dagger;equal advising)</font>
+						<font color="#000000" >Y. Li, Q. Li, H. Wang, X. Ma, J. Yao, S. Dong, H. Fan&dagger;, and L. Zhang&dagger; </font>
 						<br>
 						<font>European Conference on Computer Vision (<b>ECCV</b>), 2024.</font>
 						<br>
@@ -212,7 +212,7 @@
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">Robust Domain Adaptive Object Detection with Unified Multi-Granularity Alignment</font>
 						<br>
-						<font color="#000000" >L. Zhang, W. Zhou, H. Fan&dagger;, T. Luo, and H. Ling (&dagger;corresponding author)</font>
+						<font color="#000000" >L. Zhang, W. Zhou, H. Fan&Dagger;, T. Luo, and H. Ling (&Dagger;<b>corresponding author</b>)</font>
 						<br>
 						<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 2024, accepted. </font>
 						<br>
@@ -259,7 +259,7 @@
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">Context-Guided Spatio-Temporal Video Grounding</font>
 						<br>
-						<font color="#000000">X. Gu*, H. Fan*, Y. Huang, T. Luo, and L. Zhang (*equal contribution)</font>
+						<font color="#000000">X. Gu*, H. Fan*, Y. Huang, T. Luo, and L. Zhang</font>
 						<br>
 						<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024 </font>
 						<br>
@@ -308,7 +308,7 @@
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">MaGIC: Multi-modality Guided Image Completion</font>
 						<br>
-						<font color="#000000">H. Wang*, Y. Yu*, T. Luo, H. Fan, and L. Zhang (*equal contribution)</font>
+						<font color="#000000">H. Wang*, Y. Yu*, T. Luo, H. Fan, and L. Zhang</font>
 						<br>
 						<font>International Conference on Learning Representations (<b>ICLR</b>), 2024. </font>
 						<br>
@@ -431,7 +431,7 @@
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">Unsupervised Domain Adaptive Detection with Network Stability Analysis</font>
 					<br>
-					<font color="#000000" >W. Zhou*, H. Fan*, T. Luo, and L. Zhang (*equal contribution)</font>
+					<font color="#000000" >W. Zhou*, H. Fan*, T. Luo, and L. Zhang</font>
 					<br>
 					<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2023.</font>
 					<br>
@@ -479,7 +479,7 @@
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">PlanarTrack: A Large-scale Challenging Benchmark for Planar Object Tracking</font>
 					<br>
-					<font color="#000000" >X. Liu*, X. Liu*, Z. Yi*, X. Zhou*, T. Le, L. Zhang, Y. Huang, Q. Yang, and H. Fan (*equal contribution)</font>
+					<font color="#000000" >X. Liu*, X. Liu*, Z. Yi*, X. Zhou*, T. Le, L. Zhang, Y. Huang, Q. Yang, and H. Fan</font>
 					<br>
 					<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2023.</font>
 					<br>
@@ -495,7 +495,7 @@
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">AnimalTrack: A Benchmark for Multi-Animal Tracking in the Wild</font>
 					<br>
-					<font color="#000000" >L. Zhang*, J. Gao*, Z. Xiao, and H. Fan (*equal contribution)</font>
+					<font color="#000000" >L. Zhang*, J. Gao*, Z. Xiao, and H. Fan</font>
 					<br>
 					<font>International Journal of Computer Vision (<b>IJCV</b>), 131: 496-513, 2023.</font>
 					<br>
@@ -541,7 +541,7 @@
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">SwinTrack: A Simple and Strong Baseline for Transformer Tracking</font>
 					<br>
-					<font color="#000000" >L. Lin*, H. Fan*, Z. Zhang, Y. Xu, and H. Ling (*equal contribution)</font>
+					<font color="#000000" >L. Lin*, H. Fan*, Z. Zhang, Y. Xu, and H. Ling</font>
 					<br>
 					<font>	Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2022.</font>
 					<br>
@@ -558,7 +558,7 @@
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">Divert More Attention to Vision-Language Tracking</font>
 					<br>
-					<font color="#000000" >M. Guo*, Z. Zhang*, H. Fan, and L. Jing (*equal contribution)</font>
+					<font color="#000000" >M. Guo*, Z. Zhang*, H. Fan, and L. Jing</font>
 					<br>
 					<font>Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2022.</font>
 					<br>
