--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -127,7 +127,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <h3><font color="#355DDC">Title: Mamba: Linear-Time Sequence Modeling with Selective State Spaces</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Bing Fan</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 10-07-2024 (Monday)</p>
                 <p><b>Room:</b> <font color="purple">F285 (not F219)</font></p>
