--- a/publications.html
+++ b/publications.html
@@ -121,7 +121,7 @@
 						<br>
 						<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 2024, accepted. </font>
 						<br>
-						paper
+						<a href="./publication/PAMI_TransFlow.pdf" target="_blank"><font><font color="#2D61FF">paper</font></font></a>
 						<br>
 					</p>
 				</td>
