--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -421,7 +421,7 @@ div img:hover{
 								BLIP-2: Bootstrapping Language-Image Pre-training with Frozen Image Encoders and Large Language Models, ICML, 2023
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> Suman Pandey </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Suman Pandey (rescheduled to Week 12) </font>
 					</font>
 				</td>
 			</tr>
@@ -550,8 +550,16 @@ div img:hover{
 				</td>
 				<td style="padding: 8px;">
 					<font size="4">
-						<strong>Invited speaker</strong><br>
-						<font style="color: blue;"><strong>Presenter: </strong> TBD </font>
+						<strong>Security and privacy</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								Learning Transferable Visual Models From Natural Language Supervision, ICML, 2021
+							</li>
+							<li>
+								BLIP-2: Bootstrapping Language-Image Pre-training with Frozen Image Encoders and Large Language Models, ICML, 2023
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong> Suman Pandey </font>
 					</font>
 				</td>
 			</tr>
