--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -145,8 +145,8 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Xiaoqiong Liu</a></p>
+                <h3><font color="#355DDC">Title: Dynamic Resolution Network</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Shaohua Dong</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 10-21-2024 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
             </div>
