--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -154,7 +154,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <h3><font color="#355DDC">Title: Active Learning for Object Detection with Evidential Deep Learning and Hierarchical Uncertainty Aggregation</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Minghao Li</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 10-28-2024 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
