--- a/publications.html
+++ b/publications.html
@@ -105,7 +105,7 @@
 						<br>
 						<font>Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2024.</font>
 						<br>
-						<a href="https://arxiv.org/abs/2403.03493" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="./publication/VastTrack.pdf.pdf" target="_blank"><font color="#2D61FF">poster</font></a> &nbsp; <a href="https://github.com/HengLan/VastTrack" target="_blank"><font color="#2D61FF">code-benchmark</font></a>  
+						<a href="https://arxiv.org/abs/2403.03493" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="./publication/VastTrack-poster.pdf" target="_blank"><font color="#2D61FF">poster</font></a> &nbsp; <a href="https://github.com/HengLan/VastTrack" target="_blank"><font color="#2D61FF">code-benchmark</font></a>  
 						<br>
 					</p>
 				</td>
