--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -163,7 +163,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <h3><font color="#355DDC">Title: Privacy-preserving In-Context Learning for Large Language Models</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Mingchen Li</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 11-04-2024 (Monday)</p>
                 <p><b>Room:</b> <font color="purple">F285 (not F219)</font></p>
@@ -190,8 +190,8 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: GQA: Training Generalized Multi-Query Transformer Models from Multi-Head Checkpoints</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Shaohua Dong</a></p>
+                <h3><font color="#355DDC">TBD</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">TBD</a></p>
                 <p><b>Time:</b> 10:00am-11:00pm on 12-02-2024 (Monday)</p>
                 <p><b>Room:</b> <font color="purple">F219</font></p>
                 <br>
