--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -539,7 +539,7 @@ div img:hover{
 								Visionllm: Large language model is also an open-ended decoder for vision-centric tasks, NeurIPS, 2023
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> Paul Phillips </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Paul Phillips (cancelled due to student's absence))</font>
 					</font>
 				</td>
 			</tr>
