--- a/service.html
+++ b/service.html
@@ -72,6 +72,13 @@
 
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				IEEE International Conference on Robotics and Automation (<font style="font-weight:bold">ICRA</font>)</font>, <font size="3">2025</font>
+				<br>
+			</p>
+		</li>
+
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				IEEE/RSJ International Conference on Intelligent Robots and Systems (<font style="font-weight:bold">IROS</font>)</font>, <font size="3">2024</font>
 				<br>
 			</p>
