--- a/publications.html
+++ b/publications.html
@@ -119,7 +119,7 @@
 						<br>
 						<font color="#000000" >Y. Lu, C. Han, Q. Wang, H. Fan, Z. Kong, D. Liu, and Y. Chen</font>
 						<br>
-						<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 2024, accepted. </font>
+						<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 46(12): 11491-11506, 2024. </font>
 						<br>
 						<a href="./publication/PAMI_TransFlow.pdf" target="_blank"><font><font color="#2D61FF">paper</font></font></a>
 						<br>
@@ -214,7 +214,7 @@
 						<br>
 						<font color="#000000" >L. Zhang, W. Zhou, H. Fan&Dagger;, T. Luo, and H. Ling (&Dagger;<b>corresponding author</b>)</font>
 						<br>
-						<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 2024, accepted. </font>
+						<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 46(12): 9161-9178, 2024. </font>
 						<br>
 						<a href="https://arxiv.org/abs/2301.00371" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/tiankongzhang/MGA" target="_blank"><font color="#2D61FF">code</font></a>
 						<br>
@@ -229,7 +229,7 @@
 						<br>
 						<font color="#000000" >M. Guo, Z. Zhang, L. Jing, H. Ling, and H. Fan</font>
 						<br>
-						<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 2024, accepted. </font>
+						<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 46(12): 8600-8618, 2024. </font>
 						<br>
 						<a href="https://arxiv.org/abs/2307.10046" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#2D61FF">code</font></a>
 						<br>
