--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -593,9 +593,15 @@ div img:hover{
 				<td style="padding: 8px;">
 					<font size="4">
 						<strong>Project presentation</strong><br>
-						<font style="color: blue;"><strong>Presentation order: </strong> TBD </font>
+						<font style="color: blue;"><strong>Presentation order: </strong> 
+						</font>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								Joseph Caldwell
+							</li>
+						</ul>
 
-						<br><br>
+						<br>
 						<font style="color: red;"><strong>Project report due:</strong> 11/22</font>
 					</font>
 				</td>
