--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -176,6 +176,7 @@
                 <p><b>Speaker:</b> <a href="#", target="_blank">Md Abdullah Al Forhad</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 11-11-2024 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
+                <p><font color="red">Cancelled </font></p>
             </div>
         </section>
 
