--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -172,18 +172,8 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Md Abdullah Al Forhad</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 11-11-2024 (Monday)</p>
-                <p><b>Room:</b> F219 </p>
-                <p><font color="red">Cancelled </font></p>
-            </div>
-        </section>
-
-        <section class="section speaker">
-            <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Shaohua Dong</a></p>
+                <h3><font color="#355DDC">Title: How To Write Papers</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Heng Fan</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 11-18-2024 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
             </div>
